[gd_scene load_steps=10 format=3 uid="uid://dehhnchn7mbpb"]

[ext_resource type="PackedScene" uid="uid://gdnutflsqawt" path="res://Props/dummy.tscn" id="1_n1df7"]
[ext_resource type="Script" uid="uid://t34ou1h3ev12" path="res://Entities/Enemy/enemy_attack_component.gd" id="2_7cavd"]
[ext_resource type="Script" uid="uid://w1ifax7ovrhe" path="res://Entities/Enemy/enemy.gd" id="2_gyqvw"]
[ext_resource type="Script" uid="uid://dh2j0s0pysq7" path="res://Entities/Enemy/navigation_component.gd" id="3_a4i6x"]
[ext_resource type="Script" uid="uid://crdciy6d8ar30" path="res://Entities/Enemy/enemy_state_machine.gd" id="5_c78gp"]
[ext_resource type="Script" uid="uid://bqsgdhtbbtm2n" path="res://Entities/Enemy/wander_state.gd" id="6_fpuxb"]
[ext_resource type="Script" uid="uid://bc0mdyyuugag8" path="res://Assets/attack_state.gd" id="7_c78gp"]
[ext_resource type="Script" uid="uid://cerx17b2e6ow6" path="res://Entities/Enemy/retreat_state.gd" id="8_fpuxb"]
[ext_resource type="Script" uid="uid://cvx0r5w30t67d" path="res://Entities/Enemy/chase_state.gd" id="9_fwycg"]

[node name="Enemy" groups=["enemy"] instance=ExtResource("1_n1df7")]
collision_layer = 3
collision_mask = 3
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967040
script = ExtResource("2_gyqvw")
hp = 20

[node name="Sprite2D" parent="." index="0"]
modulate = Color(0.799456, 0.454603, 1.92523e-07, 1)

[node name="AttackComponent" type="Node2D" parent="." index="3"]
script = ExtResource("2_7cavd")

[node name="CooldownTimer" type="Timer" parent="AttackComponent" index="0"]
process_callback = 0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="4"]
path_max_distance = 200.0
simplify_path = true
simplify_epsilon = 0.1
avoidance_enabled = true
script = ExtResource("3_a4i6x")

[node name="EnemyStateMachine" type="Node" parent="." index="6" node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_c78gp")
initial_state = NodePath("Wander")
metadata/_custom_type_script = "uid://c7jqqlwbj6mw5"

[node name="Wander" type="Node" parent="EnemyStateMachine" index="0"]
script = ExtResource("6_fpuxb")
metadata/_custom_type_script = "uid://jik8rpkqsn55"

[node name="Timer" type="Timer" parent="EnemyStateMachine/Wander" index="0"]
wait_time = 3.0
autostart = true

[node name="Attack" type="Node" parent="EnemyStateMachine" index="1"]
script = ExtResource("7_c78gp")
metadata/_custom_type_script = "uid://jik8rpkqsn55"

[node name="Retreat" type="Node" parent="EnemyStateMachine" index="2"]
script = ExtResource("8_fpuxb")
metadata/_custom_type_script = "uid://jik8rpkqsn55"

[node name="Chase" type="Node" parent="EnemyStateMachine" index="3"]
script = ExtResource("9_fwycg")
metadata/_custom_type_script = "uid://jik8rpkqsn55"

[connection signal="timeout" from="AttackComponent/CooldownTimer" to="AttackComponent" method="_on_cooldown_timeout"]
[connection signal="path_changed" from="NavigationAgent2D" to="NavigationAgent2D" method="_on_path_changed"]
[connection signal="target_reached" from="NavigationAgent2D" to="NavigationAgent2D" method="_on_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="NavigationAgent2D" method="_on_velocity_computed"]
[connection signal="timeout" from="EnemyStateMachine/Wander/Timer" to="EnemyStateMachine/Wander" method="_on_timeout"]
